coverflow + fixed password change

--- a/Frontend/public/stylesheets/style.css
+++ b/Frontend/public/stylesheets/style.css
@@ -36,8 +36,10 @@ body {
 #arriba{
 	vertical-align: top;
 	text-align: right;
-	margin:auto 0;
-	padding:auto 0;
+	position: fixed;
+	right:0;
+	top:0;
+	margin:0;
 }
 #playlists{text-align: center;}
 
@@ -175,8 +177,18 @@ h1 a {
 	  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: center;
 
 }
+.flipster__item .songtitle{
+	width:18em;
+	display: none;
+}
+.flipster__item--current .songtitle{
+	width:18em;
+	display: block;
+}
+
 .songtitle:hover{
 	font-weight: bold;
 }
@@ -604,4 +616,14 @@ input[type="file"]{
 label {
 	font-size: 18px;
 	font-weight: bold;
+}
+
+.fotooo {
+	width:18em;
+}
+
+#cft{
+
+	margin-top:0;
+
 }
